# itisnotarecipe

./: Dockerfile  README.md  create  pyproject.toml  setup.cfg
.github/workflows/: deploy.yaml
recipes/: apple_pork_burger.yaml  butter_chicken.yaml  butter_paneer.yaml  chorizo_chickpea_salad.yaml  focaccia.yaml  fried_aubergine_salad.yaml  jerk_pork.yaml  lentil_shephards_pie.yaml  meatball_black_bean_chilli.yaml  mushroom_sauce.yaml  salmon_with_mushroom_and_spinach.yaml  salmon_with_sauce_and_spinach.yaml  thai_red_curry.yaml  tofu_stir_fry.yaml
static/css/: new.css  style.css
static/site/: apple_pork_burger.html  chorizo_chickpea_salad.html  focaccia.html  index.html  mushroom_sauce.html  thai_red_curry.html  tofu_stir_fry.html
static/static/css/: old.css
static/static/js/: script.js
static/static/site/: butter_chicken.html  butter_paneer.html  fried_aubergine_salad.html  jerk_pork.html  lentil_shephards_pie.html  meatball_black_bean_chilli.html  salmon_with_mushroom_and_spinach.html  salmon_with_sauce_and_spinach.html
tools/: format
tools/templates/: base.html  recipe.html  recipe.yaml
tools/tools/: lint  main.py  new_recipe
tools/tools/templates/: homepage.html
